LLD: OOPs Fundamentals - Part 2

--- a/Low Level Design - LLD/1. OOPs Fundamentals.md
+++ b/Low Level Design - LLD/1. OOPs Fundamentals.md
@@ -1,5 +1,23 @@
 # OOPs Fundamentals
 
+## Contents
+
+- [OOPs Fundamentals](#oops-fundamentals)
+  - [Contents](#contents)
+  - [What is OOPs?](#what-is-oops)
+    - [4 Pillars of OOPs](#4-pillars-of-oops)
+  - [Class (Blueprint)](#class-blueprint)
+  - [Object](#object)
+  - [`static` keyword](#static-keyword)
+  - [`this` keyword](#this-keyword)
+  - [Inheritance (Is-A Relationship)](#inheritance-is-a-relationship)
+  - [Polymorphism](#polymorphism)
+  - [Access Modifiers](#access-modifiers)
+  - [Encapsulation](#encapsulation)
+  - [Abstraction](#abstraction)
+    - [**abstract** classes and methods](#abstract-classes-and-methods)
+    - [**Interfaces**](#interfaces)
+
 ## What is OOPs?
 
 There are 2 techniques / paradigms of Programming :
@@ -69,3 +87,55 @@ There are 2 techniques / paradigms of Programming :
             -   Same function name and same parameters required.
             -   Must do Inheritance.
             -   Not allowed on Static Methods as they are bonded using static binding at compile time.
+
+## Access Modifiers
+
+Helps to restrict the access of data members and methods.
+
+-   **private** - Access only within the same class.
+-   **default** - Access is possible only within the same package.
+-   **protected** - Access is possible within same package and also within the child classes in different package.
+-   **public** - Access possible anywhere.
+
+| Access Modifier | Within Class | Within Package | Within Child Class outside Package | Outside Package |
+| --------------- | ------------ | -------------- | ---------------------------------- | --------------- |
+| **private**     | yes          | no             | no                                 | no              |
+| **default**     | yes          | yes            | no                                 | no              |
+| **protected**   | yes          | yes            | yes                                | no              |
+| **public**      | yes          | yes            | yes                                | yes             |
+
+## Encapsulation
+
+-   **Encapsulation** is to break the codes in separate modules (capsules) based on the functionality.
+-   It is used to hide the internal state and representation of the object's and to provide getters and setters for modfying the state.
+-   **Getters** and **Setters** enables us to validate the inputs before modifying the object's state, which results in an fully controlled ancapsulated module.
+-   Rules for encapsulation :
+    -   Data members should be private. (No direct access to data members)
+    -   **Getters** and **Setters** for every data members which needs to be modified from the user end.
+
+## Abstraction
+
+-   Showing only essential details and hiding all the unnecessary information from the user.
+-   Can be achieved using :
+    -   **abstract** classes
+    -   **Interfaces**
+
+### **abstract** classes and methods
+
+-   **abstract methods :**
+    -   Methods which are declared but not implemented.
+-   **abstract class :**
+    -   May or may not have all **abstract methods**.
+    -   It can have a **constructor**, and **static methods.**
+    -   It can have a **final method** that prevents child class of abstract class not to change the body of the method.
+    -   The object of **abstract class** cannot be instantiated.
+
+### **Interfaces**
+
+-   Achives **pure abstraction.**
+-   We cannot instantiate an **interface.**
+-   It does not contain any constructors.
+-   An interface cannot contain instance fields. The only fields that can appear in an interface must be declared both **static** and **final**.
+-   By default, all the members (methods and fields) of an **interface** are public.
+-   So all the **fields** of an interface are implicitly declared as **public** **static** **final**.
+-   From **JAVA 8**, we can have **default methods** (with or without implementation) and **static methods** in an **interface**.
