(Update) Software Engineering : 1. Introduction to Software Engineering

--- a/Software Engineering/1.Introduction to Software Engineering.md
+++ b/Software Engineering/1.Introduction to Software Engineering.md
@@ -2,21 +2,33 @@
 
 ## Contents
 
-- [Introduction to Software Engineering](#introduction-to-software-engineering)
-  - [Contents](#contents)
-  - [Key principles of Software Engineering](#key-principles-of-software-engineering)
-  - [4 Attributes of Software Engineering](#4-attributes-of-software-engineering)
-  - [Evolving Role of Software - Dual Role of Software](#evolving-role-of-software---dual-role-of-software)
-    - [1. As a product](#1-as-a-product)
-    - [As a vehicle for delivering a product](#as-a-vehicle-for-delivering-a-product)
-  - [Changing Nature of Software](#changing-nature-of-software)
-  - [Legacy Software](#legacy-software)
+-   [Introduction to Software Engineering](#introduction-to-software-engineering)
+    -   [Contents](#contents)
+    -   [Characteristics of software in software engineering:](#characteristics-of-software-in-software-engineering)
+    -   [Key principles of Software Engineering](#key-principles-of-software-engineering)
+    -   [4 Attributes of Software Engineering](#4-attributes-of-software-engineering)
+    -   [Evolving Role of Software - Dual Role of Software](#evolving-role-of-software---dual-role-of-software)
+        -   [1. As a product](#1-as-a-product)
+        -   [As a vehicle for delivering a product](#as-a-vehicle-for-delivering-a-product)
+    -   [Changing Nature of Software](#changing-nature-of-software)
+    -   [Legacy Software](#legacy-software)
 
 **Software** is a program or set of programs containing instructions that provide desired functionality.
 
 **Engineering** is the process of designing and building something that serves a particular purpose and finds a cost-effective solution to problems.
 
 **Software engineering** is the process of designing, developing, testing, and maintaining software. It is a systematic and disciplined approach to software development that aims to create high-quality, reliable, and maintainable software. Software engineering includes a variety of techniques, tools, and methodologies, including requirements analysis, design, testing, and maintenance.
+![software_engineering](assets/Picture1.png)
+
+## Characteristics of software in software engineering:
+
+-   Software is **developed or engineered**; it is not manufactured in the classical sense:
+    -   Although some similarities exist between software development and hardware manufacturing, few activities are fundamentally different.
+-   The software doesn’t “**wear out.**”:
+    -   There are no software spare parts.
+    -   When a hardware component wears out, it is replaced by a spare part.
+        The software continues to be custom-built:
+    -   A software part should be planned and carried out with the goal that it tends to be reused in various projects.
 
 ## Key principles of Software Engineering
 
