(Update) Software Engineering : 1. Introduction to Software Engineering

--- a/Software Engineering/1.Introduction to Software Engineering.md
+++ b/Software Engineering/1.Introduction to Software Engineering.md
@@ -12,6 +12,7 @@
         -   [As a vehicle for delivering a product](#as-a-vehicle-for-delivering-a-product)
     -   [Changing Nature of Software](#changing-nature-of-software)
     -   [Legacy Software](#legacy-software)
+    -   [Layered Technology of Software Engineering](#layered-technology-of-software-engineering)
 
 **Software** is a program or set of programs containing instructions that provide desired functionality.
 
@@ -85,3 +86,23 @@ The different types of softwares are :
 ## Legacy Software
 
 **Legacy software** is software that has been around a long time and still fulfills a business need. It is mission critical and tied to a particular version of an operating system or hardware model (vendor lock-in) that has gone end-of-life. Generally the lifespan of the hardware is shorter than that of the software.
+
+## Layered Technology of Software Engineering
+
+Software engineering is a **fully layered technology**, to develop software we need to go from one layer to another. All the layers are connected and each layer demands the fulfillment of the previous layer.
+![layered_technology](assets/Picture2.jpg)
+
+1. **A quality focus :** It defines the continuous process improvement principles of software. It provides integrity that means providing security to the software so that data can be accessed by only an authorized person, no outsider can access the data. It also focuses on maintainability and usability.
+
+2. **Process :** It is the foundation or base layer of software engineering. It is key that binds all the layers together which enables the development of software before the deadline or on time.  Process defines a framework that must be established for the effective delivery of software engineering technology. The software process covers all the activities, actions, and tasks required to be carried out for software development. 
+   **Process activities are lsited below :**
+
+    - **Communication :** It is the first and foremost thing for the development of software. Communication is necessary to know the actual demand of the client.
+    - **Planning :** It basically means drawing a map for reduced the complication of development.
+    - **Modeling :** In this process, a model is created according to the client for better understanding.
+    - **Construction :** It includes the coding and testing of the problem.
+    - **Deployment :** It includes the delivery of software to the client for evaluation and feedback.
+      ![process_activities](assets/Picture3.png)
+
+3. **Methods :** During the process of software development the answers to all “**how-to-do**” questions are given by method. It has the information of all the tasks which includes communication, requirement analysis, design modeling, program construction, testing, and support.
+4. **Tools :**  Software engineering tools provide a self-operating system for processes and methods. Tools are integrated which means information created by one tool can be used by another.
