--- a/Software Engineering/3. Requirement Engineering & Data Modelling.md
+++ b/Software Engineering/3. Requirement Engineering & Data Modelling.md
@@ -1,11 +1,12 @@
 # Contents
 
--   [Content](#content)
--   [Requirement Engineering](#requirement-engineering)
+-   [Contents](#contents)
+-   [Requirement Engineering Process](#requirement-engineering-process)
     -   [Feasibility Study](#feasibility-study)
     -   [Requirement Elicitation and Analysis](#requirement-elicitation-and-analysis)
+    -   [Problems of Elicitation and Analysis](#problems-of-elicitation-and-analysis)
 
-# Requirement Engineering
+# Requirement Engineering Process
 
 -   Requirement Engineering is the process of defining, documenting and maintaining the requirements. It is a process of gathering and defining service provided by the system. It is a four-step process, which includes:
     -   Feasibility Study
@@ -21,11 +22,13 @@
 
 ## Requirement Elicitation and Analysis
 
--   Analysis of requirements starts with requirement elicitation. The requirements are analyzed to identify inconsistencies, defects, omission, etc. We describe requirements in terms of relationships and also resolve conflicts if any.
--   **Problems of Elicitation and Analysis**
-    -   Getting all, and only, the right people involved.
-    -   Stakeholders often don't know what they want
-    -   Stakeholders express requirements in their terms.
-    -   Stakeholders may have conflicting requirements.
-    -   Requirement change during the analysis process.
-    -   Organizational and political factors may influence system requirements.
+-   Analysis of requirements starts with requirement elicitation. The requirements are analyzed to identify **inconsistencies**, **defects**, **omission**, etc. **We describe requirements in terms of relationships** and also resolve conflicts if any.
+
+## Problems of Elicitation and Analysis
+
+-   Getting all, and only, the right people involved.
+-   Stakeholders often don't know what they want
+-   Stakeholders express requirements in their terms.
+-   Stakeholders may have conflicting requirements.
+-   Requirement change during the analysis process.
+-   Organizational and political factors may influence system requirements.
