(UPDATE) Software Engineering : 3. Requirement Engineering

--- a/Software Engineering/3. Requirement Engineering & Data Modelling.md
+++ b/Software Engineering/3. Requirement Engineering & Data Modelling.md
@@ -3,8 +3,15 @@
 -   [Contents](#contents)
 -   [Requirement Engineering Process](#requirement-engineering-process)
     -   [Feasibility Study](#feasibility-study)
+        -   [Types of Feasibility Study : ](#types-of-feasibility-study-)
+            -   [Technical Feasibility](#technical-feasibility)
+            -   [Operational Feasibility](#operational-feasibility)
+            -   [Economic Feasibility](#economic-feasibility)
+            -   [Legal Feasibility](#legal-feasibility)
+            -   [Schedule Feasibility – ](#schedule-feasibility-)
     -   [Requirement Elicitation and Analysis](#requirement-elicitation-and-analysis)
     -   [Problems of Elicitation and Analysis](#problems-of-elicitation-and-analysis)
+    -   [Requirement Specification](#requirement-specification)
 
 # Requirement Engineering Process
 
@@ -20,6 +27,35 @@
 -   The main goal of this phase is to determine whether it would be financially and technically feasible to develop the software.
 -   The feasibility study involves understanding the problem and then determining the various possible strategies to solve the problem.
 
+### Types of Feasibility Study : 
+
+The feasibility study mainly concentrates on below five mentioned areas.
+
+#### Technical Feasibility
+
+-   In Technical Feasibility current resources both hardware software along with required technology are analyzed/assessed to develop project.
+-   This technical feasibility study gives report whether there exists correct required resources and technologies which will be used for project development.
+-   Feasibility study also analyzes technical skills and capabilities of technical team, existing technology can be used or not, maintenance and up-gradation is easy or not for chosen technology etc.
+
+#### Operational Feasibility
+
+-   In Operational Feasibility degree of providing service to requirements is analyzed along with how much easy product will be to operate and maintenance after deployment.
+
+#### Economic Feasibility
+
+-   In Economic Feasibility study cost and benefit of the project is analyzed.
+-   In this feasibility study a detail analysis is carried out what will be cost of the project for development which includes all required cost for final development like hardware and software resource required, design and development cost and operational cost and so on.
+
+#### Legal Feasibility
+
+-   In Legal Feasibility study project is analyzed in legality point of view.
+-   This includes analyzing barriers of legal implementation of project, data protection acts or social media laws, project certificate, license, copyright etc.
+-   Overall it can be said that Legal Feasibility Study is study to know if proposed project conform legal and ethical requirements.
+
+#### Schedule Feasibility – 
+
+-   In Schedule Feasibility Study mainly timelines/deadlines is analyzed for proposed project which includes how many times teams will take to complete final project which has a great impact on the organization as purpose of project may fail if it can’t be completed on time.
+
 ## Requirement Elicitation and Analysis
 
 -   Analysis of requirements starts with requirement elicitation. The requirements are analyzed to identify **inconsistencies**, **defects**, **omission**, etc. **We describe requirements in terms of relationships** and also resolve conflicts if any.
@@ -32,3 +68,8 @@
 -   Stakeholders may have conflicting requirements.
 -   Requirement change during the analysis process.
 -   Organizational and political factors may influence system requirements.
+
+## Requirement Specification
+
+These analyzed requirements are documented in a **software requirement specification (SRS) document.** SRS document serves as a contract between the development team and customers.
+Any future dispute between the customers and the developers can be settled by examining the SRS document.
