(UPDATE) Software Engineering : 4. Data Modelling & UML

--- a/Software Engineering/4. Data Modelling & UML.md
+++ b/Software Engineering/4. Data Modelling & UML.md
@@ -66,7 +66,7 @@ Anything that is a real world entity or object is termed as things. It can be di
     Its notation is as follows;<br>
     ![class](assets/class.png)
 -   **Object :** An individual that describes the behavior and the functions of a system. The notation of the object is similar to that of the class; the only difference is that the object name is always underlined and its notation is given below;<br>
-    ![object](ASSETS/object.png)
+    ![object](assets/object.png)
 -   **Interface :** A set of operations that describes the functionality of a class, which is implemented whenever an interface is implemented.<br>
     ![interface](assets/INTERFACE.png)
 -   **Collaboration :** It represents the interaction between things that is done to meet the goal. It is symbolized as a dotted ellipse with its name written inside it.<br>
@@ -200,7 +200,7 @@ In addition, a clear architecture will help to achieve quality in the software w
 
 ### Implementation View
 
--             It is the view that represents the organization of the core components and files.
+-   It is the view that represents the organization of the core components and files.
 -   It primarily addresses the configuration management of the systems releases.
 -   With UML, its static aspects are expressed in component diagrams, and the dynamic aspects are captured in interaction diagrams, state chart diagrams, and activity diagrams.
 
